[tool.poetry]
name = "mojo-testplus"
description = "Automation Mojo TestPlus Test Framework"
version = "1.3.23"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/testplus"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
debugpy = "^1.6.5"
click = "^8.1.3"
requests = "<=2.31.0"
mojo-errors = ">=1.3.4 <1.4.0"
mojo-collections = ">=1.3.1 <1.4.0"
mojo-config = ">=1.3.10 <1.4.0"
mojo-extension = ">=1.3.12 <1.4.0"
mojo-xmodules = ">=1.3.16 <1.4.0"
mojo-runtime = ">=1.3.9 <1.4.0"
mojo-results = ">=1.3.10 <1.4.0"
pymongo = {version = "^4.0.0", optional = true}
couchdb = {version = "^1.2", optional = true}

[tool.poetry.extras]
mongodb = ["pymongo"]
couchdb = ["couchdb"]

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.scripts]
testplus = "mojo.testplus.cli.testplus_command:testplus_root_command"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
