[tool.poetry]
name = "mojo-testplus"
description = "Automation Mojo TestPlus Test Framework"
version = "1.3.35"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/testplus"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
debugpy = "^1.6.5"
click = "^8.1.3"
requests = ">=2.32.3 <3.0.0"
mojo-errors = ">=1.3.9 <1.4.0"
mojo-collections = ">=1.3.16 <1.4.0"
mojo-config = ">=1.3.21 <1.4.0"
mojo-extension = ">=1.3.19 <1.4.0"
mojo-xmodules = ">=1.3.23 <1.4.0"
mojo-runtime = ">=1.3.30 <1.4.0"
mojo-results = ">=1.3.19 <1.4.0"
pymongo = {version = "^4.0.0", optional = true}
couchdb = {version = "^1.2", optional = true}

[tool.poetry.extras]
mongodb = ["pymongo"]
couchdb = ["couchdb"]

[tool.poetry.scripts]
testplus = "mojo.testplus.cli.testplus_command:testplus_root_command"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
