[tool.poetry]
name = "mojo-testplus"
description = "Automation Mojo TestPlus Test Framework"
version = "2.0.3"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/testplus"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
debugpy = "^1.6.5"
click = "^8.1.3"
requests = ">=2.32.3 <3.0.0"
mojo-errors = ">=2.0.1 <2.1.0"
mojo-collections = ">=2.0.0 <2.1.0"
mojo-config = ">=2.0.0 <2.1.0"
mojo-extension = ">=2.0.0 <2.1.0"
mojo-xmodules = ">=2.0.0 <2.1.0"
mojo-runtime = ">=2.0.0 <2.1.0"
mojo-results = ">=2.0.0 <2.1.0"
pymongo = {version = "^4.0.0", optional = true}
couchdb = {version = "^1.2", optional = true}

[tool.poetry.extras]
mongodb = ["pymongo"]
couchdb = ["couchdb"]

[tool.poetry.scripts]
testplus = "mojo.testplus.cli.testplus_command:testplus_root_command"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
